# rust-simple-iron-web-api

./: Cargo.toml
src/: database.rs  handler.rs  main.rs  model.rs
