[package]
name = "rust-simple-iron-web-api"
version = "0.1.0"
edition = "2021"

[dependencies]
iron = "0.6.1"
router = "0.6.0"
logger = "0.4.0"
env_logger = "0.9.0"
serde_json = "1.0.83"
serde = { version = "1.0.143", features = ["derive"] }
chrono = { version = "0.4.22", features = ["serde"] }
uuid = { version = "0.7", features = ["v4", "serde"] }